[project]
name = "DamageMeter"
version = "1"
authors = [{ name = "Niiklasu" }]
description = """\
Display the damage done by you and your party members. \n
Only the host can start/stop/reset the meter, other clients show the values tracked by the host. 
"""
dependencies = [
    "coroutines >= 1.0"
]

[tool.sdkmod]
name = "Damage Meter"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Niiklasu/bl2-sdk-mods/raw/refs/heads/main/DamageMeter/DamageMeter.sdkmod"
version = "1"